--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/autenticazione?serverTimezone=Europe/Rome&sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 spring.datasource.username=root
-spring.datasource.password=Mysql@123
+spring.datasource.password=#
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
@@ -15,10 +15,10 @@ spring.thymeleaf.suffix=.html
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-slack.token=xoxb-4909592219922-4922328465377-Gk709P0lale9zgmMJ66DVR3k
-slack.channelID=C04SNK8PB0D
-phone.numberFrom=+15075196869
-phone.numberTo=+393466754776
+slack.token=#
+slack.channelID=#
+phone.numberFrom=+#
+phone.numberTo=+#
 whatsapp.phone.numberFrom=+14155238886
-twilio.username=ACbc6a79bd82d461f37be4724b39692dcc
-twilio.password=fbb5d719d71e352507f7bd24d940954f
+twilio.username=#
+twilio.password=#
